--- a/TicTacToe/TicTacToe/TicTacToe.vcxproj
+++ b/TicTacToe/TicTacToe/TicTacToe.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>TicTacToe</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>TicTacToe</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -162,10 +163,10 @@
     <ResourceCompile Include="TicTacToe.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\TicTacToe Icons\Letter O.ico" />
-    <Image Include="..\TicTacToe Icons\Letter X.ico" />
-    <Image Include="..\TicTacToe Icons\Tic-Tac-Toe Game Icon.ico" />
-    <Image Include="..\TicTacToe Icons\Tic-Tac-Toe Game SIcon.ico" />
+    <Image Include="TicTacToe Icons\O.ico" />
+    <Image Include="TicTacToe Icons\TicTacToe.ico" />
+    <Image Include="TicTacToe Icons\TicTacToeSmall.ico" />
+    <Image Include="TicTacToe Icons\X.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
